# brand-yml

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  _publish.yml  _quarto.yml  index.html  index.qmd  listings.json  objects.txt  posit-theme.scss  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  docs-publish.yml  py-release.yml  py-test.yml  quarto-publish-example.yml
.prompts/: python-document-code.prompt  python-document-file.prompt
_partials/listing/: design-systems.ejs
_site/: about.html  examples.html  index.html  listings.json  open-questions.html  search.json
_site/brand/: color-and-theme.html  color.html  font.html  index.html  logo.html  meta.html  open-questions.html  options.html  theme.html  typography.html  variable-and-format.html
_site/examples/: dell.html  home-depot.html  home-depot.qmd  index.html
articles/: index.html  index.xml
articles/llm-brand-yml-prompt/: brand-yml.prompt.txt  index.html
brand/: color.html  color.qmd  defaults.html  font.qmd  index.html  index.qmd  logo.html  logo.qmd  meta.html  meta.qmd  open-questions.qmd  options.qmd  template.html  template.qmd  theme.qmd  typography.html  typography.qmd  variable-and-format.qmd  variables-and-format.qmd
brand/spec/: brand-color.yml  brand-logo.yml  brand-template.yml  brand-theme.yml  brand-typography.yml  brand.yml  meta.yml
docs/: .gitignore  _brand.yml  _quarto.yml  _renderer.py  _sidebar-python.yml  brand-yml-theme.scss  index.qmd  objects.txt  posit-theme.scss  post-render.sh
docs/_inv/: pydantic_objects.txt  python_objects.txt
docs/_partials/: gtm-head.html
docs/articles/: index.qmd
docs/brand/: _metadata.yml  _needs-to-be-updated.qmd  color.qmd  defaults.qmd  index.qmd  logo.qmd  meta.qmd  open-questions.qmd  typography.qmd  variables-and-format.qmd
docs/examples/: index.qmd
docs/inspiration/: index.qmd
docs/scripts/: check_examples.py
examples/: brand-color-palette-internal.yml  brand-color-palette-posit.yml  brand-color-posit-direct.yml  brand-color-posit-internal.yml  brand-color-posit-with.yml  brand-logo-full-alt.yml  brand-logo-full.yml  brand-logo-light-dark.yml  brand-logo-simple.yml  brand-logo-single.yml  brand-posit-dark.yml  brand-posit.yml  brand-typography-color.yml  brand-typography-fonts.yml  brand-typography-minimal-system.yml  brand-typography-minimal.yml  brand-typography-simple.yml
inspiration/: index.html
pkg-py/: CHANGELOG.md  README.md  README.qmd  pyproject.toml
pkg-py/src/brand_yaml/: __init__.py  _brand.py  _brand_color.py  _brand_logo.py  _brand_meta.py  _brand_utils.py  _defs.py  _path.py  _utils.py  _utils_docs.py  _utils_logging.py  _utils_yaml.py  base.py  color.py  file.py  logo.py  meta.py  typography.py
pkg-py/src/brand_yml/: __init__.py  _defs.py  _html_deps.py  _use_logo.py  _utils.py  color.py  file.py  logo.py  typography.py
pkg-py/src/brand_yml/assets/: brand-yml-logo-inline.css
pkg-py/tests/: test_brand.py  test_color.py  test_defs.py  test_envvar.py  test_file.py  test_logo.py  test_logo_formatting.py  test_meta.py  test_path.py  test_typography.py  test_utils.py  test_utils_yaml.py
pkg-py/tests/__snapshots__/: test_typography.ambr  test_utils_yaml.ambr
pkg-py/tests/__snapshots__/test_color/: test_brand_color_ex_direct_posit.json  test_brand_color_ex_palette_internal.json  test_brand_color_ex_palette_posit.json
pkg-py/tests/__snapshots__/test_logo/: TestBrandLogoExamples.test_brand_logo_ex_full.json  test_brand_logo_ex_full.json  test_brand_logo_ex_full_alt.json  test_brand_logo_ex_light_dark.json  test_brand_logo_ex_simple.json
pkg-py/tests/__snapshots__/test_meta/: test_brand_meta_ex_full.json  test_brand_meta_ex_small.json
pkg-py/tests/__snapshots__/test_typography/: test_brand_typography_ex_color.json  test_brand_typography_ex_fonts.json  test_brand_typography_ex_minimal.json  test_brand_typography_ex_minimal_mixed_source.json  test_brand_typography_ex_simple.json  test_brand_typography_ex_simple_google.json  test_brand_typography_ex_simple_system.json
pkg-py/tests/fixtures/path-resolution/: _brand.yml
pkg-py/tests/fixtures/typography-undefined-color/: undefined-base-color.yml  undefined-palette-headings-color.yml
pkg-py/tests/utils/: __init__.py
pkg-r/: .Rbuildignore  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md
pkg-r/R/: brand_color.R  brand_defaults.R  brand_logo.R  brand_meta.R  brand_typography.R  brand_use_logo.R  check.R  helpers.R  import-standalone-types-check.R  light_dark.R  read_brand_yml.R  sass.R  theme.R  utils.R  with_brand_yml.R
pkg-r/man/: as_brand_yml.Rd  brand.yml-package.Rd  brand_color_pluck.Rd  brand_has.Rd  brand_pluck.Rd  brand_sass_color.Rd  brand_sass_color_palette.Rd  brand_sass_fonts.Rd  (+12 more)
schema/: brand.schema.json  brand.schema.yml  get-schema-from-quarto.py  validate-json-schema.md  validate-json-schema.qmd
spec/: brand.schema.json  brand.spec.yml  get-spec-from-quarto.py  validate-json-schema.md  validate-json-schema.qmd
(+183 files in other folders)
