[project]
name = "brand-yaml"
version = "0.1.0"
description = "Read brand yaml files, a unified way to store brand information."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruamel-yaml>=0.18.6",
    "pydantic>=2.8.2",
    "jsonschema>=4.23.0",
    "eval-type-backport>=0.2.0",
]

[project.optional-dependencies]
quarto = [
    "pyyaml>=6.0.2",
    "nbformat>=5.10.4",
    "nbclient>=0.10.0",
]
dev = [
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
